fix expansion panel bug. fix typewriting text spacing.

--- a/personal-website-app/src/app/about-me/about-me.component.scss
+++ b/personal-website-app/src/app/about-me/about-me.component.scss
@@ -17,6 +17,9 @@
     font-weight: 700;
     text-align: center;
     margin: 1.5em 0 0.3em;
+    .name-text {
+        margin-left: 0.3em;
+    }
 }
 
 .portrait {
