--- a/personal-website-app/src/app/app.component.scss
+++ b/personal-website-app/src/app/app.component.scss
@@ -7,3 +7,9 @@
         justify-content: center;
     }
 }
+.mat-expansion-panel-header {
+    height: 48px;
+}
+.mat-expansion-panel-content:not(.mat-expanded):not(.ng-animating){
+    display: none;
+}
